src/snapshots/avro_rust_codegen__parser__parser_on_all_schemas@01_simple_record.avsc.snap
---
source: src/parser.rs
expression: ir_as_json
input_file: src/test_schemas/01_simple_record.avsc
---
{
  "com.example.simple.User": {
    "Record": {
      "name": "com.example.simple.User",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "id",
            "doc": null,
            "ty": "Long",
            "default": null
          },
          {
            "name": "username",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "is_active",
            "doc": null,
            "ty": "Boolean",
            "default": {
              "Boolean": true
            }
          }
        ]
      }
    }
  }
}
